# nicp

cpp/: .clang-format  .projectile  CMakeLists.txt
cpp/cmake_modules/: FindOchre.cmake
cpp/core/: CMakeLists.txt  cloud.h  common_types.h  data_associator.h  linearizer.h  main_test.cc  se3_utils.h  solver.h  types.h  utils.h
cpp/core/test/: CMakeLists.txt  eigen_matrix_test_helper.h  se3_utils_test.cc  utils_test.cc
cpp/registration3d/: CMakeLists.txt  cloud3d.h  data_associator_nn_cloud3d_cloud3d_extended.h  linearizer_point3d_se3.h  main_test.cc
